# spinc-bott

./: .gitignore  EXAMPLE.md  LICENSE  Makefile  Makefile.in  README.md  adjpack11.h  backtrack.c  backtrack1.c  bott.c  bott.d  bott.h  bucket.c  bucket.d  bucket.h  canonicalg.c  code.g  common.c  common.h  config.h.in  configure  configure.ac  count.c  d6pack11.h  dag.c  dag.d  dag.h  gap.c  gap.g  gap.g.in  genall.sh  mats.c  minimalf.c  orbitg  orbitg.c  orbitg.d  orientedf.c  orientedg.c  parse_scaled.h  spincf.c  (+16 more)
